WIP checkpoint: working-tree baseline for reasoning integration (PriorProvider + crawl weight-learning + type-aware SSBN)